# LicenseProject

./: .gitignore  CMakeLists.txt  LicenseProject.sln  README.md
LicenseProject/: CannyEdgeDetectorFilter.cpp  CannyEdgeDetectorFilter.hpp  Contour.cpp  Contour.hpp  ContourExtractor.cpp  ContourExtractor.hpp  DataInternalRepresentation.hpp  EdgeExtractor.cpp  EdgeExtractor.hpp  EdgeSet.cpp  EdgeSet.hpp  ExecutionPipeline.cpp  ExecutionPipeline.hpp  Filter.hpp  FilterBase.hpp  GlobalExceptionHandler.cpp  GlobalExceptionHandler.hpp  IFilter.hpp  IFilterBase.hpp  IWorkspace.hpp  Image.cpp  Image.hpp  ImageToPointSetConverterFilter.cpp  ImageToPointSetConverterFilter.hpp  ImageViewerFilter.cpp  ImageViewerFilter.hpp  LicenseProject.vcxproj  LicenseProject.vcxproj.filters  LocalThresholder.cpp  LocalThresholder.hpp  Mesh.hpp  MeshCreatorFilter.cpp  MeshCreatorFilter.hpp  MeshSerializerFilter.cpp  MeshSerializerFilter.hpp  MeshSerializerOBJFilter.cpp  MeshSerializerOBJFilter.hpp  MorphologicalFilter.cpp  MorphologicalFilter.hpp  OpeningFilter.cpp  (+41 more)
LicenseProject/cache/point_extractor_filter/: pointset_18082914106525182688.txt
img2obj/Core/: ExecutionPipeline.hpp
img2obj/DAO/: PointSet.hpp  Slice.hpp
img2obj/DataStructures/: thread_pool.hpp  thread_safe_queue.hpp
img2obj/Filters/CannyEdge/: CannyEdgeFilter.cpp  CannyEdgeFilter.hpp
img2obj/Filters/PixelExtractor/: PixelExtractorFilter.cpp  PixelExtractorFilter.hpp
img2obj/Filters/PointExtractor/: PointExtractorFilter.cpp  PointExtractorFilter.hpp
img2obj/Main/: main.cpp
img2obj/Misc/: Settings.hpp
